--- a/src/components/main.css
+++ b/src/components/main.css
@@ -57,6 +57,7 @@ a {
     margin: 0;
     font-size: 15px;
     font-weight: 500;
+    /* margin-top: 2em; */
 }
 
 .content-links {
@@ -153,10 +154,11 @@ strong {
 
 .sidebar-container {
     z-index: 2;
-    /* display: inline-block; */
     position: fixed;
     height: 100%;
     width: 10em;
+    text-align: left;
+    top: 0;
 }
 
 .menu {
@@ -169,6 +171,14 @@ strong {
     position: fixed;
     width: 100%;
     height: 100%;
+}
+
+.menu li {
+    margin-top: 2em;
+}
+
+.menu img {
+    align-self: center;
 }
 
 .menu a {
